# opto-project

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: SetupCore.cmake
libs/cuda/: CMakeLists.txt
libs/optodevkit/: CMakeLists.txt  acquisitionsystem.h  extension.h  plugin.h
libs/qcustomplot/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/AxialPsfAnalyzerExtension/: CMakeLists.txt
plugins/CameraExtension/: CMakeLists.txt
plugins/ImageStatisticsExtension/: CMakeLists.txt
plugins/opto_demo_extension/: CMakeLists.txt  demoextension.h
plugins/opto_virtual_oct_system/: CMakeLists.txt
release/: history.yaml  version.rc.in
src/app/: extensionmanager.cpp  glwindow2d.cpp  glwindow2d.h  gpu2hostnotifier.cpp  gpu2hostnotifier.h  kernels.h  main.cpp  mesh.h  octalgorithmparameters.h  octproz.cpp  octproz.h  octproz.ui  polynomial.h  processing.cpp  processing.h  trackball.h
